--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NextGenFEATS",
+  "name": "nextgenfeats",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,8 @@
     "clean": "npx rimraf test-results playwright-report .features-gen allure-results allure-report logs error.log",
     "allure:clear": "if exist allure-results (rd /s /q allure-results) && if exist allure-report (rd /s /q allure-report)",
     "allure:generate": "npx allure generate allure-results --clean -o allure-report",
-    "allure:open": "npx allure open allure-report"
+    "allure:open": "npx allure open allure-report",
+    "generate-pom": "ts-node POM/generate.ts"
   },
   "keywords": [],
   "author": "",
